<?xml version="1.0" encoding="utf-8"?>
<!-- AI Dictation keyboard configuration -->
<input-method xmlns:android="http://schemas.android.com/apk/res/android"
    android:settingsActivity="com.whispermate.aidictation.MainActivity"
    android:supportsSwitchingToNextInputMethod="true">
    <subtype
        android:icon="@drawable/ic_ime_switcher_dark"
        android:label="@string/subtype_en_US"
        android:imeSubtypeLocale="en_US"
        android:imeSubtypeMode="keyboard"
        android:isAsciiCapable="true" />
    <subtype
        android:icon="@drawable/ic_ime_switcher_dark"
        android:label="@string/subtype_es_ES"
        android:imeSubtypeLocale="es_ES"
        android:imeSubtypeMode="keyboard"
        android:isAsciiCapable="true" />
    <subtype
        android:icon="@drawable/ic_ime_switcher_dark"
        android:label="@string/subtype_fr_FR"
        android:imeSubtypeLocale="fr_FR"
        android:imeSubtypeMode="keyboard"
        android:isAsciiCapable="true" />
    <subtype
        android:icon="@drawable/ic_ime_switcher_dark"
        android:label="@string/subtype_de_DE"
        android:imeSubtypeLocale="de_DE"
        android:imeSubtypeMode="keyboard"
        android:isAsciiCapable="true" />
    <subtype
        android:icon="@drawable/ic_ime_switcher_dark"
        android:label="@string/subtype_pt_BR"
        android:imeSubtypeLocale="pt_BR"
        android:imeSubtypeMode="keyboard"
        android:isAsciiCapable="true" />
    <subtype
        android:icon="@drawable/ic_ime_switcher_dark"
        android:label="@string/subtype_ru_RU"
        android:imeSubtypeLocale="ru_RU"
        android:imeSubtypeMode="keyboard"
        android:isAsciiCapable="false" />
</input-method>
